# assign2

./: Cargo.toml  README.md
rust/: Cargo.toml
rust/src/: lib.rs
src/: index.js  lib.rs  package-lock.json  package.json
src/components/: pages.js
src/pages/: main_page.rs  registration.rs
